Bug 165001 - Selection in RTL mode is broken
Summary: Selection in RTL mode is broken
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: kwrite (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-26 13:41 UTC by Zayed Al-Saidi
Modified: 2008-10-20 07:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
wrong behavior of selection in kwrite (77.67 KB, image/jpeg)
2008-06-26 13:45 UTC, Zayed Al-Saidi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zayed Al-Saidi 2008-06-26 13:41:44 UTC
Version:            (using KDE 4.0.83)
Installed from:    Ubuntu Packages
OS:                Linux

I run kwrite in RTL mode and write some Arabic text. When I want to select some words or all the text by mouse I get some thing weird. First some text area disappear. Second I have difficulties to select certain area.  See the attached screen-shot for have idea. 

Way to reproduce this bug. 
1- Run kwrite in RTL mode. 
2- Paste this Arabic script : 

سي 
بسيبسيبسيبسيبسبس س بسي بسيبس يبسب سبسبسيبسي بس بسي س سي  
 سيبس يبس
 س
بس
 ب
سب سس بسيبسيبسبس  سبسب س س بسب سب بسس بب ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق  ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق ب ي يليبليسبليث يثب     سيلسيلشسسب     يلثقق

3- Try to select all this text by mouse. 
4- try to  start the selection from half the text block.
Comment 1 Zayed Al-Saidi 2008-06-26 13:45:26 UTC
Created attachment 25617 [details]
wrong behavior of selection in kwrite
Comment 2 Christophe Marin 2008-06-26 16:06:55 UTC
Confirmed in trunk
Comment 3 Hamish Rodda 2008-06-29 12:30:35 UTC
SVN commit 825757 by rodda:

Fix drawing of selection beyond selected text range for RTL languages
Also fix a few other hidden bugs
(Just noticed a mouse-select RTL bug, will investigate)

BUG:165001

 M  +23 -18    katerenderer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=825757
Comment 4 Zayed Al-Saidi 2008-10-16 17:54:34 UTC
The problem is still in kde 4.1.2. I can not select the first two digits from any paragraph. 

Just past this text in RTL kwrite mode:
الرياض ـ العمانية: أعلنت مؤسسة العالم للصحافة والنشر والتوزيع عن اختيار حضرة صاحب الجلالة السلطان قابوس بن سعيد المعظم ـ حفظه الله ورعاه ـ شخصية العدالة والإنسانية للعام الجاري 2008م وذلك بمباركة وتزكية عربية وإسلامية ودولية.

Then try to select all the text. You will can not select the fist two digits.   
Comment 5 David Nolden 2008-10-17 19:48:10 UTC
Has it worked after hamishs commit? Maybe it was broken again. Can you test that?
Comment 6 Zayed Al-Saidi 2008-10-17 20:21:43 UTC
I do not know ! 

Hamishs any comment ?
Comment 7 Hamish Rodda 2008-10-20 07:53:16 UTC
SVN commit 873764 by rodda:

Remove restrictions on X which were incorrect for RTL lines.

The algorithm here to determine cursor position past end of line is wrong for RTL lines, but that's a separate issue.

BUG:165001


 M  +2 -10     katerenderer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=873764