Fix drawing of selection beyond selected text range for RTL languages Also fix a few other hidden bugs (Just noticed a mouse-select RTL bug, will investigate)

BUG:165001

svn path=/trunk/KDE/kdelibs/kate/; revision=825757